added keywords and narrator
